# recall-cli

./: .gitignore  Cargo.toml  README.md
src/: app.rs  card.rs  cli.rs  list.rs  main.rs
src/cli/: mod.rs
src/commands/: info.rs  learn.rs  list.rs  mod.rs  review.rs  study.rs
